--- a/kr/index.html
+++ b/kr/index.html
@@ -68,6 +68,10 @@
 	<div class="block9"> гор.Калуга </div>
 	<div class="photo"> <img src="https://github.com/evshadrina/evshadrina/blob/main/men.jpg?raw=true" height="118" width="120"/> </div>
 
-
+<body>
+<a href="../kr/task_2_1.html" target="_self">>--> Изменяем по клику</a>
+<a href="../kr/task_2_final.html" target="_self">>--> Алгоритмическая задача</a>
+<a href="../kr/task_3.html" target="_self">>--> Алгоритмическая задача 2</a>	
+</body>
 </body>
 </html>
