--- a/kr/task_2_final.html
+++ b/kr/task_2_final.html
@@ -60,5 +60,9 @@
    document.getElementById("result").innerHTML = result;
   }
  </script>
-
+<body>
+<a href="../kr/task_2_1.html" target="_self">>--> Изменяем по клику</a>
+<a href="../kr/index.html" target="_self">>--> Паспорт</a>
+<a href="../kr/task_3.html" target="_self">>--> Алгоритмическая задача 2</a>	
+</body>
 </html>
