--- a/kr/task_2_1.html
+++ b/kr/task_2_1.html
@@ -83,7 +83,7 @@
  <button onclick="changeText()">Изменить кириллицу на латиницу по клику</button>
 </body>
 	<body>
-<a href="../kr/index.html" target="_self">>--> Изменяем по клику</a>
+<a href="../kr/index.html" target="_self">>--> Паспорт</a>
 <a href="../kr/task_2_final.html" target="_self">>--> Алгоритмическая задача</a>
 <a href="../kr/task_3.html" target="_self">>--> Алгоритмическая задача 2</a>	
 </body>
